# guile-language-server

./: .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  README.md  configure.ac  format.scm  guix.scm  hall.scm  json-rpc.scm  main.scm  test.scm  wrapper
doc/: language-server.texi
language-server/: emacs.scm  protocol.scm  scm-utils.scm
language-server/guile/: compile.scm  extended-scheme.scm  formatter.scm  server.scm  xref.scm
scripts/: guile-ls.in
tests/: compile.scm  extended-scheme.scm  formatter.scm  test-utils.scm
tests/dir-locals/: .dir-locals.el
tests/dir-locals/testing/: .dir-locals.el
